--- a/chess.board/css/styles.css
+++ b/chess.board/css/styles.css
@@ -10,9 +10,12 @@ html {line-height: 1.15;-webkit-text-size-adjust: 100%;}body {margin: 0;}main {d
 
 .board {border-collapse: collapse;} 
 .board tr td {border: 1px solid #000;} 
-.board tr td.black{background-color: black; width: 50px; height: 50px;}
-.board tr td.white{background-color: silver; width:50px; height:50px;}
+.board tr td.black{background-color: black; width: 50px; height: 50px;color:white; text-align:center;font-size:20px;padding:0;}
+.board tr td.white{background-color: silver; width:50px; height:50px;color:white;text-align:center;font-size:20px;padding:0;}
 .board tr td.coordinates{height: 25px; width: 25px; text-align: center; font-size:20px; border:none; font-weight: bold;}
+
+
+
 
 .menu_top {margin:20px;} 
 .menu_top ul {margin:0;}
