--- a/chess.board/css/styles.css
+++ b/chess.board/css/styles.css
@@ -80,3 +80,5 @@ button{display: block; margin:0 auto;   box-shadow: 1px 4px 13px 0px #000000;}
 	width: 57px;
 	text-align: center;
 }
+
+.error_text {color: red;}
