--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,8 @@ html {line-height: 1.15;-webkit-text-size-adjust: 100%;}body {margin: 0;}main {d
 .green {border:1px solid green;}
 
 
-
+.board_color {border-collapse: collapse; margin: 10px 0 50px 30px; box-shadow: 1px 4px 13px 0 #000000;}
+.board_color tr td {width: 56px; height: 50px;}
 .board {border-collapse: collapse;  box-shadow: 1px 4px 13px 0px #000000; margin:0 30px;} 
 .board tr td {border: 1px solid #000;}
 .board tr td.white{background-color: white; width:50px; height:50px;color:black;text-align:center;font-size:20px;padding:0;}
