--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ html {line-height: 1.15;-webkit-text-size-adjust: 100%;}body {margin: 0;}main {d
 .board_color tr td {width: 56px; height: 50px;}
 .board {border-collapse: collapse;  box-shadow: 1px 4px 13px 0px #000000; margin:0 30px;} 
 .board tr td {border: 1px solid #000;}
-.board tr td.white{background-color: white; width:50px; height:50px;color:black;text-align:center;font-size:20px;padding:0;}
+.board tr td.cell_board{background-color: white; width:50px; height:50px;color:black;text-align:center;font-size:20px;padding:0;}
 .board tr td.black{background-color: black; width: 50px; height: 50px;color:white; text-align:center;font-size:20px;padding:0;border: 1px solid white;}
 .board tr td.coordinates{height: 25px; width: 25px; text-align: center; font-size:20px; border:none; font-weight: bold;}
 
