--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,8 @@ html {line-height: 1.15;-webkit-text-size-adjust: 100%;}body {margin: 0;}main {d
 
 
 .board_color {border-collapse: collapse; margin: 10px 0 50px 30px; box-shadow: 1px 4px 13px 0 #000000;}
-.board_color tr td {width: 56px; height: 50px;}
+.board_color tr td {width: 56px; height: 50px; border:1px solid black;}
+.board_color tr td.active {border: 5px solid black}
 .board {border-collapse: collapse;  box-shadow: 1px 4px 13px 0px #000000; margin:0 30px;} 
 .board tr td {border: 1px solid #000;}
 .board tr td.cell_board{background-color: white; width:50px; height:50px;color:black;text-align:center;font-size:20px;padding:0;}
