--- a/css/styles.css
+++ b/css/styles.css
@@ -9,12 +9,12 @@ html {line-height: 1.15;-webkit-text-size-adjust: 100%;}body {margin: 0;}main {d
 .green {border:1px solid green;}
 
 
-.board_color {border-collapse: collapse; margin: 10px 0 50px 30px; box-shadow: 1px 4px 13px 0 #000000;}
+.board_color {border-collapse: collapse; margin: 10px 0 50px 30px; box-shadow: 1px 4px 13px 0 #000000;cursor: pointer;}
 .board_color tr td {width: 56px; height: 50px; border:1px solid black;}
-.board_color tr td.active {border: 5px solid black}
-.board {border-collapse: collapse;  box-shadow: 1px 4px 13px 0px #000000; margin:0 30px;} 
+.board_color tr td.current {border: 5px solid black;}
+.board {border-collapse: collapse;  box-shadow: 1px 4px 13px 0px #000000; margin:0 30px; cursor: pointer;}
 .board tr td {border: 1px solid #000;}
-.board tr td.cell_board{background-color: white; width:50px; height:50px;color:black;text-align:center;font-size:20px;padding:0;}
+.board tr td.cell_board{background-color: white; width:50px; height:50px;color:black;text-align:center;font-size:20px;padding:0;  caret-color: transparent;}
 .board tr td.black{background-color: black; width: 50px; height: 50px;color:white; text-align:center;font-size:20px;padding:0;border: 1px solid white;}
 .board tr td.coordinates{height: 25px; width: 25px; text-align: center; font-size:20px; border:none; font-weight: bold;}
 
@@ -89,7 +89,7 @@ button{display: block; margin:0 auto;   box-shadow: 1px 4px 13px 0px #000000;}
 	display: inline-block;
 	margin: 10px 0 50px 30px;
 }
-a.color_reset{
+a.button_reset{
 	background:linear-gradient(to bottom, #FFFFFF, #E6E6E6) #F5F5F5 repeat-x;
 	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) #B3B3B3;
 	border-radius: 4px;
@@ -119,7 +119,7 @@ a.color_reset{
 	box-shadow: 0 0 1px rgba(0, 0, 0, 0);
 }
 
-a.color_reset:before {
+a.button_reset:before {
 	pointer-events: none;
 	position: absolute;
 	z-index: -1;
@@ -137,12 +137,12 @@ a.color_reset:before {
 	transition-property: transform, opacity;
 }
 
-a.color_reset:hover {
+a.button_reset:hover {
 	-webkit-transform: translateY(-5px);
 	-ms-transform: translateY(-5px);
 	transform: translateY(-5px);
 }
-a.color_reset:hover:before {
+a.button_reset:hover:before {
 	opacity: 1;
 	-webkit-transform: translateY(5px);
 	-ms-transform: translateY(5px);
